# MultiModelProxy

./: .gitignore  Dockerfile  README.md  config_sample.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
src/: __init__.py  api.py  config.py  inference.py  main.py  util.py
src/config/: config.py
src/inference/: InferenceBase.py  MistralInference.py  OpenRouterInference.py  TabbyApiInference.py
src/utility/: database.py  logger.py  methods.py  variables.py
