[metadata]
name = openapi_server
version = 0.1.0
description = This docs page is not meant to send requests! Please use a service like Postman or a frontend UI.
long_description = file: README.md
keywords = OpenAPI TabbyAPI
python_requires = >= 3.12.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = src
packages = find_namespace:

[options.packages.find]
where = src
